canary/film-storage-route-online.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: film-storage
spec:
  to:
    kind: Service
    name: film-storage
